Update Flow link

--- a/templates/default/403.html
+++ b/templates/default/403.html
@@ -835,7 +835,7 @@ hr, .hr {
 						<ul class="b-drop-nav">
 							<li><a href="http://buzz.typo3.org/" target="_blank">Buzz (TYPO3 Blogs)</a></li>
 							<li><a href="http://certification.typo3.org/" target="_blank">Certification</a></li>
-							<li><a href="http://flow3.typo3.org/" target="_blank">FLOW3</a></li>
+							<li><a href="http://flow.typo3.org/" target="_blank">Flow</a></li>
 							<li><a href="http://forge.typo3.org/" target="_blank">Forge (Dev Platform)</a></li>
 							<li><a href="http://lists.typo3.org/" target="_blank">Mailing lists</a></li>
 							<li><a href="http://association.typo3.org/" target="_blank">TYPO3 Association</a></li>
