Slightly update 403 message

--- a/templates/default/403.html
+++ b/templates/default/403.html
@@ -806,7 +806,7 @@ hr, .hr {
 				<div class="b-wi-text">
 					<h1>The page is beeing reset</h1>
 
-					<h2>Reset shouldn't last more than 60 seconds...</h2>
+					<h2>Reset should not last more than 60 seconds...</h2>
 
 					<div class="b-404-description">
 						<p>
