[FEATURE] Add Neos Installer and refactor TYPO3 CMS installer
Resolves #1

--- a/templates/default/apache2-site-template.erb
+++ b/templates/default/apache2-site-template.erb
@@ -8,6 +8,7 @@
 	ErrorLog "<%= @log_dir %>/error_log"
 	ErrorDocument 403 /403.html
 	LogLevel warn
+	<%= @environment_variable %>
 	<Directory "<%= @document_root %>">
 		RedirectMatch permanent ^/login /typo3
 		AllowOverride All
