--- a/templates/default/nginx-conf-php.erb
+++ b/templates/default/nginx-conf-php.erb
@@ -10,10 +10,11 @@ location ~ \.php$ {
         }
         fastcgi_pass 127.0.0.1:$phpFpmPort;
 
-        set $php_value "open_basedir='$document_root:/var/www/vhosts/$domain/www/:/var/www/vhosts/$domain/core/:/tmp'";
+        set $php_value "open_basedir='$document_root:$application_path:/tmp'";
         fastcgi_param PHP_VALUE $php_value;
-        #fastcgi_param FLOW3_REWRITEURLS 1;
-        #fastcgi_param FLOW3_CONTEXT Production;
+        fastcgi_param FLOW_CONTEXT Production;
+        fastcgi_param FLOW_ROOTPATH $application_path;
+        fastcgi_param FLOW_REWRITEURLS 1;
 
         include fastcgi_params;
 }
