Listen also to IPv6 socket

--- a/templates/default/nginx-site-template.erb
+++ b/templates/default/nginx-site-template.erb
@@ -1,5 +1,5 @@
 server {
-        listen  80;
+        listen  [::]:80;
 
         set $domain "<%= @domain %>";
         set $application_path "/var/www/vhosts/<%= @domain %>/releases/current";
