--- a/templates/default/nginx-conf-php.erb
+++ b/templates/default/nginx-conf-php.erb
@@ -15,6 +15,7 @@ location ~ \.php$ {
         fastcgi_param FLOW_CONTEXT Production;
         fastcgi_param FLOW_ROOTPATH $application_path;
         fastcgi_param FLOW_REWRITEURLS 1;
+        fastcgi_param TYPO3_COMPOSER_AUTOLOAD 1;
 
         include fastcgi_params;
 }
