[BUGFIX] Fix permission problem on file PackageStates.php

--- a/templates/default/nginx-site-template.erb
+++ b/templates/default/nginx-site-template.erb
@@ -2,7 +2,7 @@ server {
         listen  80;
 
         <% if @redirect %>
-        # Redirect as we want it!
+        # Redirect as we want it so!
         rewrite ^ $scheme://<%= @redirect %>$request_uri? permanent;
         <% end %>
 
