--- a/templates/default/nginx-site-default.erb
+++ b/templates/default/nginx-site-default.erb
@@ -1,5 +1,5 @@
 server {
-  listen   80 default_server;
+  listen  [::]:80 default_server;
   server_name  localhost;
 
   access_log  /var/log/nginx/access.log;
